<resources>
    <string name="app_name">CostOptimizer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textView">Добавьте новые покупки</string>
    <string name="id">ID</string>
    <string name="my_purchases">Мои покупки</string>
    <string name="name2">Название</string>
    <string name="add">Добавить</string>
    <string name="count">Количество</string>
    <string name="store">Магазин</string>
    <string name="cost">Цена</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="purchase_added">Покупка добавлена</string>
    <string name="purchase_edited">Покупка изменена</string>
    <string name="choose_importance_of_purchase">Определите важность покупки</string>
    <string name="choose_purchase_category">Выберите категорию товара</string>
    <string name="purchase_name">Название покупки</string>
    <string name="cherry_pie">Вишневый пирог</string>
    <string name="set_purchase_date">Укажите дату покупки</string>
    <string name="you_have_not_purchases">У вас еще нет никаких покупок</string>
    <string name="see_diagramm">Посмотреть диаграмму</string>
    <string name="get_advice">Получить совет</string>
    <string name="see_graph">Посмотреть график</string>
    <string name="settings">Настройки</string>
    <string name="save">Сохранить</string>
    <string name="saved">Сохранено</string>
    <string name="you_exceed_monthly_limit">Вы превышаете месячный лимит</string>
    <string name="monthly_limit">Месячный лимит</string>
    <string name="daily_limit">Ежедневный лимит</string>
    <string name="food">Еда</string>
    <string name="fun">Развлечения</string>
    <string name="clothes">Одежда</string>
    <string name="sport">Спорт</string>
    <string name="cosmetics">Косметика</string>
    <string name="utilites">Коммунальные услуги</string>
    <string name="internet">Интернет</string>
    <string name="transport">Транспорт</string>
    <string name="others">Другие</string>
</resources>
